# llm-app

./: 001-simple-chatbot.py  LICENSE  README.adoc  chaining-prompts.ipynb  error_question.txt  messages.json  prediction.json  prediction_120.json  pyproject.toml  requirements.txt  tweetqa-eval-v1.ipynb  validate.json  validate2.json  zzz-nb001-poetry-vs-pyenv.ipynb  zzz-nb001-simple-chatbot.ipynb  zzz-nb002-advanced-chatbot.ipynb  zzz-nb002-student-setup-after-downloading-code.ipynb
.ipynb_checkpoints/: tweetqa-eval-checkpoint.ipynb  tweetqa-eval-v1-checkpoint.ipynb
